[package]
name = "reborrow-derive"
version = "0.5.2"
edition = "2021"
authors = ["sarah <>"]
description = "Emulate reborrowing for user types."
readme = "../README.md"
repository = "https://github.com/kitegi/reborrow/"
license = "MIT"
keywords = ["reborrow", "lifetime"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0" }
