[package]
name = "reborrow"
version = "0.3.2"
edition = "2021"
authors = ["sarah <>"]
description = "Emulate reborrowing for user types."
readme = "../README.md"
repository = "https://github.com/kitegi/reborrow/"
license = "MIT"
keywords = ["reborrow", "lifetime"]

[dependencies]
reborrow-derive = { version = "0.3.0", path = "../reborrow-derive", optional = true }

[features]
default = []
derive = ["reborrow-derive"]
